[gd_scene load_steps=3 format=3 uid="uid://csi1klkpv5puv"]

[ext_resource type="Script" path="res://Assets/Scripts/Item/Traps/Fire/Spin/spin_fire.gd" id="1_5n6cr"]
[ext_resource type="PackedScene" uid="uid://ciarqdqth480a" path="res://Assets/Scences/Traps/fire.tscn" id="1_fi32d"]

[node name="Spining_fire" type="Node2D"]
script = ExtResource("1_5n6cr")
metadata/_edit_group_ = true

[node name="Fire" parent="." instance=ExtResource("1_fi32d")]

[node name="Fire3" parent="." instance=ExtResource("1_fi32d")]

[node name="Fire5" parent="." instance=ExtResource("1_fi32d")]

[node name="Fire7" parent="." instance=ExtResource("1_fi32d")]

[node name="Rotation" type="Node2D" parent="."]
metadata/_edit_group_ = true

[node name="Marker2D" type="Marker2D" parent="Rotation"]
position = Vector2(0, -45)

[node name="Marker2D3" type="Marker2D" parent="Rotation"]
position = Vector2(45, 0)

[node name="Marker2D5" type="Marker2D" parent="Rotation"]
position = Vector2(0, 45)

[node name="Marker2D7" type="Marker2D" parent="Rotation"]
position = Vector2(-45, 0)
